--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Food</h1>
-
-<%= render 'form', food: @food %>
-
-<%= link_to 'Show', @food %> |
-<%= link_to 'Back', foods_path %>
+<%- model_class = Food -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
