--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Food</h1>
-
-<%= render 'form', food: @food %>
-
-<%= link_to 'Back', foods_path %>
+<%- model_class = Food -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
